--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             }
         }
     </style>
-    <title>Cultura Maya</title>
+    <title>Estación de Reciclaje</title>
 </head>
 
 <body>
