--- a/index.html
+++ b/index.html
@@ -470,6 +470,9 @@
         <h2>¿Te gustaría hacer una manualidad con reciclado?</h2>
         <p>
             Te damos un par de ideas con materiales y pasos para que te motives a reciclar de manera creativa.
+            <br>
+            <br>
+            <a href="https://www.educo.org/Blog/Reciclaje-actividades-y-manualidades-para-ninos">Más Ideas Aquí</a>
         </p>
     </div>
     <div class="text">
