--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
             Te damos un par de ideas con materiales y pasos para que te motives a reciclar de manera creativa.
             <br>
             <br>
-            <a href="https://www.educo.org/Blog/Reciclaje-actividades-y-manualidades-para-ninos">Más Ideas Aquí</a>
+            <a href="https://www.educo.org/Blog/Reciclaje-actividades-y-manualidades-para-ninos" fontcolor="blue">Más Ideas Aquí</a>
         </p>
     </div>
     <div class="text">
